# foggy-runtime-cli

./: .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  demo_replay_failure.yml  feature_request.yml
.github/workflows/: release.yml
scripts/: build-release.ps1  build-release.sh  install-foggy-runtime-cli.ps1  install-foggy-runtime-cli.sh  run-java-runtime-smoke.ps1  run-sales-drop-demo-replay.ps1  verify-foggy-ai-analysis-demo.ps1
src/foggy_runtime_cli/: __init__.py  client.py  main.py
tests/: test_cli.py  test_client_http.py
